apps/base/immich/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
      kind: Gateway

  hostnames:
    - photos.${main_domain}

  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /

      backendRefs:
      - name: immich
        namespace: immich
        port: 10323
